build: base, parser, bench